--- a/src/html/rafale-b.html
+++ b/src/html/rafale-b.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafale - Site officiel</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="src/css/main.css">
+    <link rel="stylesheet" href="../css/other/rafale-b.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
@@ -31,7 +31,15 @@
     <div class="container mt-5">
         <h1>Rafale B - Caractéristiques Techniques</h1>
         <div class="row">
-            <div class="col-md-6">
+            <!-- Image du Rafale -->
+            <div class="card">
+                <div class="image-container">
+                    <img src="../img/Dassault_Rafale_M.jpg" alt="Rafale image">
+                </div>
+            </div>
+
+            <!-- Texte des caractéristiques -->
+            <div class="col-md-6 text-content">
                 <h3>Caractéristiques principales :</h3>
                 <ul>
                     <li>**Version** : Biplace</li>
@@ -42,12 +50,12 @@
                     <li>**Rayon d'action** : 1 850 km</li>
                 </ul>
             </div>
-            <div class="col-md-6">
-                <img src="../img/Dassault_Rafale_M.jpg" class="img-fluid" alt="Rafale B">
-            </div>
         </div>
-        <p>Le Rafale B est une version biplace du Rafale utilisée principalement pour l'entraînement, les missions de reconnaissance, et d'attaque au sol. Il offre une grande flexibilité dans ses missions avec une capacité d'adaptation aux systèmes d'armement modernes.</p>
+        <p>Le Rafale B est une version biplace du Rafale utilisée principalement pour l'entraînement, les missions de
+            reconnaissance, et d'attaque au sol. Il offre une grande flexibilité dans ses missions avec une capacité
+            d'adaptation aux systèmes d'armement modernes.</p>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
