--- a/src/html/rafale-b.html
+++ b/src/html/rafale-b.html
@@ -6,7 +6,6 @@
     <title>Rafale - Site officiel</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/other/rafale-b.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
     <!-- Navbar -->
@@ -29,33 +28,29 @@
 
     <!-- Page Content -->
     <div class="container mt-5">
-        <h1>Rafale B - Caractéristiques Techniques</h1>
-        <div class="row">
+        <h1 class="text-center mb-4">Rafale B - Caractéristiques Techniques</h1>
+        
+        <div class="card">
             <!-- Image du Rafale -->
-            <div class="card">
-                <div class="image-container">
-                    <img src="../img/Dassault_Rafale_M.jpg" alt="Rafale image">
-                </div>
+            <div class="image-container">
+                <img src="../img/Dassault_Rafale_M.jpg" alt="Rafale image">
             </div>
 
             <!-- Texte des caractéristiques -->
-            <div class="col-md-6 text-content">
+            <div class="text-content">
                 <h3>Caractéristiques principales :</h3>
                 <ul>
-                    <li>**Version** : Biplace</li>
-                    <li>**Longueur** : 15.27 mètres</li>
-                    <li>**Envergure** : 10.8 mètres</li>
-                    <li>**Vitesse maximale** : 1.8 Mach</li>
-                    <li>**Capacité d'emport** : 9.5 tonnes</li>
-                    <li>**Rayon d'action** : 1 850 km</li>
+                    <li><strong>Version</strong> : Biplace</li>
+                    <li><strong>Longueur</strong> : 15.27 mètres</li>
+                    <li><strong>Envergure</strong> : 10.8 mètres</li>
+                    <li><strong>Vitesse maximale</strong> : 1.8 Mach</li>
+                    <li><strong>Capacité d'emport</strong> : 9.5 tonnes</li>
+                    <li><strong>Rayon d'action</strong> : 1 850 km</li>
                 </ul>
+                <p>Le Rafale B est une version biplace du Rafale utilisée principalement pour l'entraînement, les missions de reconnaissance, et d'attaque au sol. Il offre une grande flexibilité dans ses missions avec une capacité d'adaptation aux systèmes d'armement modernes.</p>
             </div>
         </div>
-        <p>Le Rafale B est une version biplace du Rafale utilisée principalement pour l'entraînement, les missions de
-            reconnaissance, et d'attaque au sol. Il offre une grande flexibilité dans ses missions avec une capacité
-            d'adaptation aux systèmes d'armement modernes.</p>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
