--- a/src/html/rafale-b.html
+++ b/src/html/rafale-b.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafale - Site officiel</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/other/rafale-b.css">
+    <link rel="stylesheet" href="../css/other/rafale_page.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../../index.html"><img src="../img/logo.png" alt="Rafale Logo" width="40"> Rafale</a>
+            <a class="navbar-brand" href="../../index.html"><img src="../img/logo.png" alt="Rafale Logo" width="40"> Rafale B</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,31 +26,39 @@
         </div>
     </nav>
 
-    <!-- Page Content -->
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">Rafale B - Caractéristiques Techniques</h1>
-        
+    <div class="card-container">
+        <!-- Carte du texte (liste) -->
         <div class="card">
-            <!-- Image du Rafale -->
-            <div class="image-container">
-                <img src="../img/Dassault_Rafale_M.jpg" alt="Rafale image">
-            </div>
+            <h2>Caractéristiques principales :</h2>
+            <ul>
+            <li><strong>Version :</strong> Biplace</li>
+            <li><strong>Longueur :</strong> 15.27 mètres</li>
+            <li><strong>Envergure :</strong> 10.8 mètres</li>
+            <li><strong>Vitesse maximale :</strong> 1.8 Mach</li>
+            <li><strong>Capacité d'emport :</strong> 9.5 tonnes</li>
+            <li><strong>Rayon d'action :</strong> 1 850 km</li>
+            <li><strong>Moteurs :</strong> 2 moteurs SNECMA M88-2</li>
+            <li><strong>Poids :</strong> 10 450 kg (à vide), 24,5 tonnes (maximum)</li>
+            <li><strong>Équipage :</strong> 2 membres d'équipage</li>
+            <li><strong>Capacité de ravitaillement en vol :</strong> oui</li>
+            <li><strong>Capacité de vol supersonique :</strong> oui</li>
+            <li><strong>Capacité de décollage par catapultage :</strong> oui</li>
+            <li><strong>Capacité de décollage et d'atterrissage courts :</strong> oui</li>
+            <li><strong>Capacité de voler à basse altitude :</strong> oui</li>
+            </ul>
+        </div>
 
-            <!-- Texte des caractéristiques -->
-            <div class="text-content">
-                <h3>Caractéristiques principales :</h3>
-                <ul>
-                    <li><strong>Version</strong> : Biplace</li>
-                    <li><strong>Longueur</strong> : 15.27 mètres</li>
-                    <li><strong>Envergure</strong> : 10.8 mètres</li>
-                    <li><strong>Vitesse maximale</strong> : 1.8 Mach</li>
-                    <li><strong>Capacité d'emport</strong> : 9.5 tonnes</li>
-                    <li><strong>Rayon d'action</strong> : 1 850 km</li>
-                </ul>
-                <p>Le Rafale B est une version biplace du Rafale utilisée principalement pour l'entraînement, les missions de reconnaissance, et d'attaque au sol. Il offre une grande flexibilité dans ses missions avec une capacité d'adaptation aux systèmes d'armement modernes.</p>
-            </div>
+        <!-- Carte de l'image (à droite de la carte des caractéristiques) -->
+        <div class="card">
+            <img src="../img/rafale-b.jpg" alt="Rafale B">
+        </div>
+
+        <!-- Carte du paragraphe (en dessous des deux cartes) -->
+        <div class="card paragraph-card">
+            <p>Le Rafale-B est un avion de chasse français de quatrième génération, conçu pour des missions de défense aérienne, de frappe au sol et de reconnaissance. Il est équipé de deux moteurs SNECMA M88-2, qui lui permettent d'atteindre une vitesse maximale de Mach 1,8. Le Rafale-B est également équipé d'un système d'armes avancé, comprenant des missiles air-air, des missiles air-sol et des bombes guidées. En plus de sa capacité de combat, le Rafale-B est également connu pour sa polyvalence, sa maniabilité et sa capacité à opérer à partir de porte-avions. C'est un avion de chasse très performant et fiable, qui est largement utilisé par l'armée de l'air française.En plus de ses capacités de combat et de sa polyvalence, il est important de noter que le Rafale-B est également un avion biplace. Cela signifie qu'il peut accueillir deux membres d'équipage à bord, ce qui est particulièrement utile pour les missions de reconnaissance et de formation. Le pilote est assis à l'avant de l'avion, tandis que le navigateur / officier des systèmes d'armes est assis à l'arrière. Cette configuration permet une meilleure communication et une meilleure coordination entre les membres d'équipage, ce qui est essentiel pour les missions complexes. En somme, le Rafale-B est un avion de chasse très avancé et polyvalent, qui est capable de remplir une variété de missions avec succès.</p>
         </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
