--- a/src/html/models.html
+++ b/src/html/models.html
@@ -27,7 +27,7 @@
 
     <!-- Section de présentation des modèles sous forme de cards -->
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Découvrez les modèles de Rafale</h1>
+        <h1 class="text-center mb-4">Découvrez les modèles du Rafale</h1>
         <div class="row">
             <!-- Card Rafale B -->
             <div class="col-md-4 mb-4">
