--- a/src/html/rafale-c.html
+++ b/src/html/rafale-c.html
@@ -27,7 +27,7 @@
     </nav>
 
     <div class="card-container">
-        <!-- Carte du texte (liste) -->
+        <!-- Carte du texte -->
         <div class="card">
             <h2>Caractéristiques principales :</h2>
             <ul>
@@ -48,12 +48,12 @@
             </ul>
         </div>
 
-        <!-- Carte de l'image (à droite de la carte des caractéristiques) -->
+        <!-- Carte de l'image (à droite de la carte) -->
         <div class="card">
             <img src="../img/rafale-C.jpg" alt="Rafale B">
         </div>
 
-        <!-- Carte du paragraphe (en dessous des deux cartes) -->
+        <!-- Carte du paragraphe (en dessous) -->
         <div class="card paragraph-card">
             <p>Le Rafale-B est un avion de chasse français de quatrième génération, conçu pour des missions de défense aérienne, de frappe au sol et de reconnaissance. Il est équipé de deux moteurs SNECMA M88-2, qui lui permettent d'atteindre une vitesse maximale de Mach 1,8. Le Rafale-B est également équipé d'un système d'armes avancé, comprenant des missiles air-air, des missiles air-sol et des bombes guidées. En plus de sa capacité de combat, le Rafale-B est également connu pour sa polyvalence, sa maniabilité et sa capacité à opérer à partir de porte-avions. C'est un avion de chasse très performant et fiable, qui est largement utilisé par l'armée de l'air française.En plus de ses capacités de combat et de sa polyvalence, il est important de noter que le Rafale-B est également un avion biplace. Cela signifie qu'il peut accueillir deux membres d'équipage à bord, ce qui est particulièrement utile pour les missions de reconnaissance et de formation. Le pilote est assis à l'avant de l'avion, tandis que le navigateur / officier des systèmes d'armes est assis à l'arrière. Cette configuration permet une meilleure communication et une meilleure coordination entre les membres d'équipage, ce qui est essentiel pour les missions complexes. En somme, le Rafale-B est un avion de chasse très avancé et polyvalent, qui est capable de remplir une variété de missions avec succès.</p>
         </div>
