--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class="display-4">Présentation du Rafale</h1>
             <p class="lead">Découvrez le Rafale, la supériorité aérienne française</p>
             <!-- Bouton redirigeant vers la page des modèles -->
-            <a href="src/html/models.html" class="btn btn-primary btn-lg">Explorer les modèles</a>
+            <a href="src/html/models.html" class="btn btn-primary btn-lg">Explorer les modèle</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
